# training_mmdetection

./: build.sh  dockerfile  pipeline_runner.py  pyproject.toml  readme.md  train.py  train_pipeline.yaml  utils.py
components/: build.sh  dockerfile  download.py  export.py  train.yaml
configs/: CASCADE_RCNN_COCO.py
tests/: test_utils.py
